fix: fix visibility

--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ button {
 }
 
 .settings,
-.shuffle {
+.shuffle,
+.initially {
     padding: 10px 0;
     display: flex;
     flex-direction: column;
